Fixed links and images that were 404, updated broken HTML

--- a/apps/ios/swtorcalculator/index.html
+++ b/apps/ios/swtorcalculator/index.html
@@ -62,25 +62,25 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 							 <!-- start content_slider -->
 						       <div id="owl-demo" class="owl-carousel">
 				                <div class="item">
-					                	<img src="1.png" title="name" />
+					                	<img src="1.png" title="name" alt="Screen" />
 					                </div>
 					                <div class="item">
-					                	<img src="2.png" title="name" />
+					                	<img src="2.png" title="name" alt="Screen" />
 					                </div>
 					                <div class="item">
-					                	<img src="3.png" title="name" />
+					                	<img src="3.png" title="name" alt="Screen" />
 					                </div>
 					                 <div class="item">
-					                	<img src="4.png" title="name" />
+					                	<img src="4.png" title="name" alt="Screen" />
 					                </div>
 					                 <div class="item">
-					                	<img src="5.png" title="name" />
+					                	<img src="5.png" title="name" alt="Screen" />
 					                </div>
 					                 <div class="item">
-					                	<img src="6.png" title="name" />
+					                	<img src="6.png" title="name" alt="Screen" />
 					                </div>
 					                 <div class="item">
-					                	<img src="7.png" title="name" />
+					                	<img src="7.png" title="name" alt="Screen" />
 					                </div>
 
 				              </div>
@@ -88,7 +88,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				</div>
 				</div>
 				<div class="col-md-7 header-right">
-					<a href="https://itunes.apple.com/us/app/swtor-discipline-utility-calculator/id1023767306?ls=1&at=1010lHG?mt=8"><img src="logo.png" title="value" /></a>
+					<a href="https://itunes.apple.com/us/app/swtor-discipline-utility-calculator/id1023767306?ls=1&at=1010lHG?mt=8"><img src="logo.png" title="value" alt="logo" /></a>
 					<p>SWTOR Discipline and Utility Calculator now available for iOS!</p>
 					<ul class="big-btns">
 						<li><a class="btn-g" href="https://itunes.apple.com/us/app/swtor-discipline-utility-calculator/id1023767306?ls=1&at=1010lHG?mt=8">Free Download</a></li>
@@ -156,7 +156,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						<li><a href="http://www.valentinourbano.com/tos/"> Terms of Use </a><span> </span></li>
 						<li><a href="http://www.valentinourbano.com/apps/"> Apps </a><span> </span></li>
 						<li><a href="http://www.valentinourbano.com/support/">  Support and Help </a><span> </span></li>
-						<li><a href="http://www.valentinourbano.com/copyright/index.php#swtorcalculator">  Copyright </a></li>
+						<li><a href="http://www.valentinourbano.com/copyright/">  Copyright </a></li>
 					</ul>
 					<script type="text/javascript">
 									$(document).ready(function() {
@@ -173,7 +173,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 										
 									});
 								</script>
-									<a href="#" id="toTop" style="display: block;"> <span id="toTopHover" style="opacity: 1;"> </span></a>
+									<a href="." id="toTop" style="display: block;"> <span id="toTopHover" style="opacity: 1;"> </span></a>
 				</div>
 				<!---- footer-links ---->
 			</div>
