--- a/apps/ios/minimalcounter/index.html
+++ b/apps/ios/minimalcounter/index.html
@@ -62,19 +62,19 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 							 <!-- start content_slider -->
 						       <div id="owl-demo" class="owl-carousel">
 				                <div class="item">
-					                	<img src="http://www.valentinourbano.com/apps/ios/minimalcounter/1.png" title="name" />
+					                	<img src="http://www.valentinourbano.com/apps/ios/minimalcounter/1.png" title="name" alt="Screen" />
 					                </div>
 					                <div class="item">
-					                	<img src="http://www.valentinourbano.com/apps/ios/minimalcounter/2.png" title="name" />
+					                	<img src="http://www.valentinourbano.com/apps/ios/minimalcounter/2.png" title="name" alt="Screen" />
 					                </div>
 					                <div class="item">
-					                	<img src="http://www.valentinourbano.com/apps/ios/minimalcounter/3.png" title="name" />
+					                	<img src="http://www.valentinourbano.com/apps/ios/minimalcounter/3.png" title="name" alt="Screen" />
 					                </div>
 					                 <div class="item">
-					                	<img src="http://www.valentinourbano.com/apps/ios/minimalcounter/4.png" title="name" />
+					                	<img src="http://www.valentinourbano.com/apps/ios/minimalcounter/4.png" title="name" alt="Screen" />
 					                </div>
 					                 <div class="item">
-					                	<img src="http://www.valentinourbano.com/apps/ios/minimalcounter/5.png" title="name" />
+					                	<img src="http://www.valentinourbano.com/apps/ios/minimalcounter/5.png" title="name" alt="Screen" />
 					                </div>
 
 				              </div>
@@ -82,7 +82,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				</div>
 				</div>
 				<div class="col-md-7 header-right">
-					<a href="https://geo.itunes.apple.com/us/app/minimal-counter-counting-made/id1011715982?&at=1010lHG?mt=8"><img src="http://www.valentinourbano.com/apps/ios/minimalcounter/logo.png" title="value" /></a>
+					<a href="https://geo.itunes.apple.com/us/app/minimal-counter-counting-made/id1011715982?&at=1010lHG?mt=8"><img src="http://www.valentinourbano.com/apps/ios/minimalcounter/logo.png" title="value" alt="logo" /></a>
 					<p>The best counter app for iOS!</p>
 					<ul class="big-btns">
 						<li><a class="btn-g" href="https://geo.itunes.apple.com/us/app/minimal-counter-counting-made/id1011715982?&at=1010lHG?mt=8">Free Download</a></li>
@@ -146,7 +146,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 							 <!-- start content_slider -->
 						       <div id="owl-demo1" class="owl-carousel">
 					                <div class="item">
-					                	<img src="http://www.valentinourbano.com/apps/ios/minimalcounter/divice-screen.png" title="name" />
+					                	<img src="http://www.valentinourbano.com/apps/ios/minimalcounter/divice-screen.png" title="name" alt="screen" />
 					                </div>
 <!--
 					                <div class="item">
@@ -390,7 +390,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						<li><a href="http://www.valentinourbano.com/tos/"> Terms of Use </a><span> </span></li>
 						<li><a href="http://www.valentinourbano.com/apps/"> Apps </a><span> </span></li>
 						<li><a href="http://www.valentinourbano.com/support/">  Support and Help </a><span> </span></li>
-						<li><a href="http://www.valentinourbano.com/copyright/index.php#minimalcounter">  Copyright </a></li>
+						<li><a href="http://www.valentinourbano.com/copyright/">  Copyright </a></li>
 					</ul>
 					<script type="text/javascript">
 									$(document).ready(function() {
@@ -407,7 +407,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 										
 									});
 								</script>
-									<a href="#" id="toTop" style="display: block;"> <span id="toTopHover" style="opacity: 1;"> </span></a>
+									<a href="." id="toTop" style="display: block;"> <span id="toTopHover" style="opacity: 1;"> </span></a>
 				</div>
 				<!---- footer-links ---->
 			</div>
