--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
---- layout: default ---
+---
+layout: default 
+---
 
 <div class="teaserimage">
     <div class="teaserimage-image" {% if site.cover %}style="background-image: url({{ site.cover | prepend: site.baseurl }})" {% endif %}>
