--- a/apps/ios/swtorcalculator/index.html
+++ b/apps/ios/swtorcalculator/index.html
@@ -95,11 +95,13 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                 <a href="https://itunes.apple.com/us/app/swtor-discipline-utility-calculator/id1023767306?ls=1&at=1010lHG?mt=8"><img src="logo.png" title="value" alt="logo" /></a>
                 <p>SWTOR Discipline and Utility Calculator now available for iOS!</p>
                 <ul class="big-btns">
-                    <li><a class="btn-g" href="https://itunes.apple.com/us/app/swtor-discipline-utility-calculator/id1023767306?ls=1&at=1010lHG?mt=8">Free Download</a></li>
+                    <li><a class="btn-g" href="https://itunes.apple.com/us/app/swtor-discipline-utility-calculator/id1023767306?ls=1&at=1010lHG?mt=8">Free
+                            Download</a></li>
                     <li><a class="btn-gr" href="#feature-link">learn more</a></li>
                 </ul>
                 <ul class="usefull-for">
-                    <li><a class="u-apple" href="https://itunes.apple.com/us/app/swtor-discipline-utility-calculator/id1023767306?ls=1&at=1010lHG?mt=8"><span> </span></a></li>
+                    <li><a class="u-apple" href="https://itunes.apple.com/us/app/swtor-discipline-utility-calculator/id1023767306?ls=1&at=1010lHG?mt=8"><span>
+                            </span></a></li>
 
                 </ul>
             </div>
@@ -111,10 +113,11 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     <div class="top-grids">
         <div class="container">
             <div class="top-grids-head text-center" id="feature-link">
-                <h3>With SWTOR Calculator you can easily check your discipline on your iPhone or iPod touch [iPad Support Coming Soon].
+                <h3>With SWTOR Calculator you can easily check your discipline on your iPhone or iPod touch.
                 </h3>
                 <p> Check your favourite disciplines and utility skills. <br> Check out class and advanced class abilities. <br> Create your custom toons and save your disciplines and utilities. <br> For more informations <a href="https://valentinourbano.freshdesk.com/support/solutions/6000129714"
-                        target="_blank">check the knowledge base</a>.</p>
+                        target="_blank">check
+                        the knowledge base</a>.</p>
             </div>
             <div class="top-grids-box">
                 <div class="col-md-4  top-grid text-center">
@@ -131,10 +134,6 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                     <span class="t-icon3"> </span>
                     <h4>Feels at home</h4>
                     <p>Built from the ground up to feel at home on iOS. </p>
-                    <!--
-<h4>Full iPad and Landscape Support</h4>
-								<p>Feels right at home on iPad as well and supports landscape on all iPhones (full support for iPhone 6 Plus too!).</p>
--->
                 </div>
                 <div class="clearfix"> </div>
             </div>
@@ -163,8 +162,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                 <li><a href="/"> Home </a><span> </span></li>
                 <li><a href="/tos/"> Terms of Use </a><span> </span></li>
                 <li><a href="/projects/"> Projects </a><span> </span></li>
-                <li><a href="/support/">  Support and Help </a><span> </span></li>
-                <li><a href="/copyright/">  Copyright </a></li>
+                <li><a href="/support/"> Support and Help </a><span> </span></li>
+                <li><a href="/copyright/"> Copyright </a></li>
             </ul>
             <script type="text/javascript">
                 $(document).ready(function() {
