--- a/apps/mac/iplocation/index.html
+++ b/apps/mac/iplocation/index.html
@@ -8,7 +8,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>IPLocation</title>
+    <title>IPLocation 2</title>
 
     <meta name="apple-itunes-app" content="app-id=1013033169, affiliate-data=at=1010lHG&ct=blog&mt=12">
 
@@ -58,7 +58,7 @@
             <div class="slider-container" id="slider">
                 <div class="container">
                     <div class="row mh-container">
-                        <h1><span>IP</span>Location</h1>
+                        <h1><span>IP</span>Location 2</h1>
                         <h3>Now in your menubar</h3>
                         <div class="col-md-4 col-md-push-4">
                             <div class="btn-group btn-group-justified btn-lg small">
@@ -120,9 +120,9 @@
                     <!-- Collect the nav links, forms, and other content for toggling -->
                     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                         <ul class="nav navbar-nav social hidden-xs hidden-sm">
-                            <li><i class="fa fa-google-plus fa-lg fa-fw"></i></li>
+                            <!-- <li><i class="fa fa-google-plus fa-lg fa-fw"></i></li>
                             <li><i class="fa fa-twitter fa-lg fa-fw"></i></li>
-                            <li><i class="fa fa-facebook fa-lg fa-fw"></i></li>
+                            <li><i class="fa fa-facebook fa-lg fa-fw"></i></li> -->
                         </ul>
                         <ul class="nav navbar-nav navbar-right">
                             <li class="active"><a href="#slider">top</a></li>
@@ -147,9 +147,11 @@
                 <div class="row">
                     <div class="col-md-8 col-md-push-2 clearfix">
                         <div class="section-heading scrollpoint sp-effect3">
-                            <h3>IPLocation<span> features</span></h3>
+                            <h3>IPLocation 2<span> features</span></h3>
                             <span class="divider"></span>
-                            <p>Check the location of your IP address, automatically, from your menubar. <br>Each time your IP changes IPLocation will let you know.</p>
+                            <p>Each time your IP changes IPLocation will let you know.</p>
+                            <p>Keep track of the location of your IP address, automatically, from your menubar.</p>
+                            <p>Keep a log of all your IPs over time.</p>
                         </div>
                     </div>
                     <div class="col-md-12">
@@ -163,8 +165,8 @@
                                                 <div class="icon">
                                                     <i class="fa fa-weixin fa-4x"></i>
                                                 </div>
-                                                <h4>IP Location</h4>
-                                                <p>Get the location of your IP address.</p>
+                                                <h4>IP Location 2</h4>
+                                                <p>Track the location of your IP address.</p>
                                             </div>
                                         </div>
                                         <div class="col-md-3 col-sm-6">
@@ -191,7 +193,7 @@
                                                     <i class="fa fa-cogs fa-4x"></i>
                                                 </div>
                                                 <h4>Get More Details</h4>
-                                                <p>Details include ISP name, timezone and even more.</p>
+                                                <p>Details include ISP name, timezone and more.</p>
                                             </div>
                                         </div>
                                     </div>
@@ -212,8 +214,8 @@
                                                 <div class="icon">
                                                     <i class="fa fa-cogs fa-4x"></i>
                                                 </div>
-                                                <h4>Customize</h4>
-                                                <p>Customize it as you wish.</p>
+                                                <h4>History</h4>
+                                                <p>Keep an history of the changes.</p>
                                             </div>
                                         </div>
                                         <div class="col-md-3 col-sm-6">
@@ -221,8 +223,8 @@
                                                 <div class="icon">
                                                     <i class="fa fa-dollar fa-4x"></i>
                                                 </div>
-                                                <h4>Your Choice</h4>
-                                                <p>You can choose to buy from the Online Store or from the Mac AppStore.</p>
+                                                <h4>Indie</h4>
+                                                <p>Support an Indipendent Developer.</p>
                                             </div>
                                         </div>
                                         <div class="col-md-3 col-sm-6">
@@ -231,7 +233,7 @@
                                                     <i class="fa fa-ticket fa-4x"></i>
                                                 </div>
                                                 <h4>Support</h4>
-                                                <p>All my apps come with free customer support.</p>
+                                                <p>All my apps come with customer support.</p>
                                             </div>
                                         </div>
                                     </div>
@@ -253,8 +255,8 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-10 col-md-push-1">
-                        <h1>Free <span>3 Day Trial</span> Available</h1>
-                        <h4>Try it before you decide to purchase! Get a taste of all the features in IPLocation Mini for 3 days, no strings attached. <br><br></h4>
+                        <h1>IPLocation 2 <span>Available</span> in the Mac App Store</h1>
+                        <h4>Get it in the Mac App Store now. <br><br></h4>
                         <br><br><br>
                         <p><a href="https://infinit.io/_/zixgq2T" class="btn btn-default scrollpoint sp-effect1">download now!</a></p>
                     </div>
@@ -330,16 +332,16 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="item">
+                                <!-- <div class="item">
                                     <div class="row">
                                         <div class="center-text">
                                             <div class="feature scrollpoint sp-effect2">
-                                                <h4>IPLocation Mini</h4>
+                                                <h4>IPLocation</h4>
                                                 <p><img src="/apps/mac/iplocation/2.png" alt="Screen"></p>
                                             </div>
                                         </div>
                                     </div>
-                                </div>
+                                </div> -->
                                 <div class="item">
                                     <div class="row">
                                         <div class="center-text">
@@ -354,7 +356,7 @@
                             <!-- Indicators -->
                             <ol class="carousel-indicators">
                                 <li data-target="#carousel-example-generic-1" data-slide-to="0" class="active"></li>
-                                <li data-target="#carousel-example-generic-1" data-slide-to="1"></li>
+                                <!-- <li data-target="#carousel-example-generic-1" data-slide-to="1"></li> -->
                                 <li data-target="#carousel-example-generic-1" data-slide-to="2"></li>
                             </ol>
                         </div>
@@ -380,9 +382,8 @@
                     <div class="col-md-6">
                         <div class="pack scrollpoint sp-effect6">
                             <div class="heading">
-                                <h3>IPLocation Mini</h3>
-                                <h1>19.99<sup>$</sup></h1>
-                                <h5>Free Updates*</h5>
+                                <h4><s>IPLocation 1</s></h4>
+                                <h3>Legacy Version - Retired</h3>
                             </div>
                             <div class="details">
                                 <ul>
@@ -393,34 +394,40 @@
                                     <li>Free Support</li>
                                     <li>Support a solo, indipendent developer</li>
                                 </ul>
-                                Note: The store version of IPLocation is currenctly unsupported. Migrate for free to the MAS Version. To find out how contact me via <a href="/about/">email</a> with your proof of purchase.<br> You can still buy a licence
-                                from the store below and get it migrated over to the MAS whenever you like.
-                                <a href="https://sites.fastspring.com/myshar/product/iplocationmini" class="btn btn-sign-up btn-block">Buy now</a> [and also get the MAS version for free]
+                                <p>
+                                    Note: IPLocation 1 is an old version and is currenctly unsupported. <br>If you've purchased IPLocation 1 after May 1st 2018 and before the release of IPLocation 2 (October 26th) you can get the all new IPLocation 2 for free. This special offer applies to
+                                    both users of the direct version and the mac app store version of IPLocation 1. <br>To find out how contact me via <a href="/about/">email</a> with your proof (and date) of purchase.
+                                </p>
+                                <s><a href="#" class="btn btn-sign-up btn-block">  </a>Retired</s>
                             </div>
                         </div>
                     </div>
                     <div class="col-md-6">
                         <div class="pack scrollpoint sp-effect6">
                             <div class="heading">
-                                <h3>IPLocation</h3>
+                                <h3>IPLocation 2</h3>
                                 <h1>24.99<sup>$</sup></h1>
                                 <h5>Free Updates*</h5>
                             </div>
                             <div class="details">
                                 <ul>
                                     <li>Location of your IP address</li>
+                                    <li>History of your accesses</li>
                                     <li>Full featured map</li>
-                                    <li>More details including ISP name, Timezone and more!</li>
+                                    <li>More details including ISP name and more!</li>
                                     <li>Notifications</li>
                                     <li>Sound Notification</li>
-                                    <li>Copy your IP address instantly</li>
-                                    <li>No ads, No spam, ...</li>
+                                    <li>Copy your IP address to the clipboard instantly</li>
+                                    <li>No ads, No spam</li>
+                                    <li>Your history stays local</li>
+                                    <li>Dark Mode Support</li>
                                     <li>Free Support</li>
                                     <li>Support a solo, indipendent developer</li>
                                 </ul>
-                                Note: The store version of IPLocation is currenctly unsupported. Migrate for free to the MAS Version. To find out how contact me via <a href="/about/">email</a> with your proof of purchase.<br> You can still buy a licence
-                                from the store below and get it migrated over to the MAS whenever you like.
-                                <a href="https://sites.fastspring.com/myshar/product/iplocation" class="btn btn-sign-up btn-block">Buy now</a> [and also get the MAS version for free]
+                                <!-- Note: The store version of IPLocation is currenctly unsupported. Migrate for free to the MAS Version. To find out how contact me via <a href="/about/">email</a> with your proof of purchase.<br> You can still buy a licence
+                                from the store below and get it migrated over to the MAS whenever you like. -->
+                                <a href="" class="btn btn-sign-up btn-block">Buy now</a>
+                                <!-- <a href="https://sites.fastspring.com/myshar/product/iplocation" class="btn btn-sign-up btn-block">Buy now</a> [and also get the MAS version for free] -->
                             </div>
                         </div>
                     </div>
@@ -430,7 +437,7 @@
                 <div class="row">
                     <div class="col-md-8 col-md-push-2 clearfix">
                         <div class="section-heading scrollpoint sp-effect3">
-                            <p>*Free Updates for minor updates. Major releases (usually every few years) may require an upgrade.</p>
+                            <p>*Free Updates for patches and minor updates. Major (3.x, ...) releases (usually every few years) may require an upgrade.</p>
                         </div>
                     </div>
                 </div>
@@ -444,14 +451,15 @@
                     <div class="col-md-12">
                         <div class="social">
                             <ul>
-                                <li><i class="fa fa-google-plus fa-lg"></i></li>
-                                <li><i class="fa fa-twitter fa-lg"></i></li>
-                                <li><i class="fa fa-facebook fa-lg"></i></li>
+                                <!-- <li><i class="fa fa-google-plus fa-lg"></i></li> -->
+                                <li><a href="https://twitter.com/valentinourbano"><i class="fa fa-twitter fa-lg"></i></a></li>
+                                <!-- <li><i class="fa fa-facebook fa-lg"></i></li> -->
                             </ul>
                         </div>
                         <div class="links">
                             <ul>
                                 <li><a href="/"> Home </a><span> </span></li>
+                                <li><a href="/privacy/"> Privacy </a><span> </span></li>
                                 <li><a href="/tos/"> Terms of Use </a><span> </span></li>
                                 <li><a href="/projects/"> Projects </a><span> </span></li>
                                 <li><a href="/support/">  Support and Help </a></li>
