--- a/apps/ios/minimalcounter/index.html
+++ b/apps/ios/minimalcounter/index.html
@@ -89,11 +89,13 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                 <a href="https://geo.itunes.apple.com/us/app/minimal-counter-counting-made/id1011715982?&at=1010lHG?mt=8"><img src="/apps/ios/minimalcounter/logo.png" title="value" alt="logo" /></a>
                 <p>The best counter app for iOS!</p>
                 <ul class="big-btns">
-                    <li><a class="btn-g" href="https://geo.itunes.apple.com/us/app/minimal-counter-counting-made/id1011715982?&at=1010lHG?mt=8">Free Download</a></li>
+                    <li><a class="btn-g" href="https://geo.itunes.apple.com/us/app/minimal-counter-counting-made/id1011715982?&at=1010lHG?mt=8">Free
+                            Download</a></li>
                     <li><a class="btn-gr" href="#feature-link">learn more</a></li>
                 </ul>
                 <ul class="usefull-for">
-                    <li><a class="u-apple" href="https://geo.itunes.apple.com/us/app/minimal-counter-counting-made/id1011715982?&at=1010lHG?mt=8"><span> </span></a></li>
+                    <li><a class="u-apple" href="https://geo.itunes.apple.com/us/app/minimal-counter-counting-made/id1011715982?&at=1010lHG?mt=8"><span>
+                            </span></a></li>
 
                 </ul>
             </div>
@@ -360,29 +362,28 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     </div>
     <!----- testmonials ---->
     <!----- notify ---->
-    <!--
-<div class="notify">
-				<div class="container">
-					<div class="notify-grid">
-						<img src="web/images/msg-icon.png" title="mail" />
-						<h3>Get Notified of any updates!</h3>
-						<p>Subscribe to our newsletter to be notified about new version release</p>
-						<form>
-							<input type="text" class="text" value="Your email address" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Your email address';}">
-							<input type="submit" value="Submit" />
-						</form>
-					</div>
-				</div>
-			</div>
-			-->
+
+    <div class="notify">
+        <div class="container">
+            <div class="notify-grid">
+                <h3>Get Notified of any updates!</h3>
+                <p>Subscribe to our newsletter to be notified about new version release</p>
+                <form>
+                    <input type="text" class="text" value="Your email address" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Your email address';}">
+                    <input type="submit" value="Submit" />
+                </form>
+            </div>
+        </div>
+    </div>
+
     <!----- notify ---->
     <!----- social-icons ---->
     <div class="social-icons">
         <div class="container">
             <ul>
                 <li><a class="twitter" href="https://twitter.com/valentinourbano"><span> </span></a></li>
-                <li><a class="facebook" href="https://www.facebook.com/valentinourbanosupport"><span> </span></a></li>
-                <!--
+                <!--<li><a class="facebook" href="https://www.facebook.com/valentinourbanosupport"><span> </span></a></li>
+                
 						<li><a class="vemeo" href="#"><span> </span></a></li>
 						<li><a class="pin" href="#"><span> </span></a></li>
 -->
@@ -395,8 +396,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                 <li><a href="/"> Home </a><span> </span></li>
                 <li><a href="/tos/"> Terms of Use </a><span> </span></li>
                 <li><a href="/projects/"> Projects </a><span> </span></li>
-                <li><a href="/support/">  Support and Help </a><span> </span></li>
-                <li><a href="/copyright/">  Copyright </a></li>
+                <li><a href="/support/"> Support and Help </a><span> </span></li>
+                <li><a href="/copyright/"> Copyright </a></li>
             </ul>
             <script type="text/javascript">
                 $(document).ready(function() {
