--- a/apps/ios/swtorcalculator/index.html
+++ b/apps/ios/swtorcalculator/index.html
@@ -143,12 +143,26 @@ License URL: http://creativecommons.org/licenses/by/3.0/
         <div class="clearfix"> </div>
     </div>
     <!----- top-grids ----->
+
+    <div class="notify">
+        <div class="container">
+            <div class="notify-grid">
+                <h3>Get Notified of any updates!</h3>
+                <p>Subscribe to our newsletter to be notified about new version release</p>
+                <form>
+                    <input type="text" class="text" value="Your email address" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Your email address';}">
+                    <input type="submit" value="Submit" />
+                </form>
+            </div>
+        </div>
+    </div>
+
     <div class="social-icons">
         <div class="container">
             <ul>
                 <li><a class="twitter" href="https://twitter.com/valentinourbano"><span> </span></a></li>
-                <li><a class="facebook" href="https://www.facebook.com/valentinourbanosupport"><span> </span></a></li>
-                <!--
+                <!-- <li><a class="facebook" href="https://www.facebook.com/valentinourbanosupport"><span> </span></a></li>
+               
 						<li><a class="vemeo" href="#"><span> </span></a></li>
 						<li><a class="pin" href="#"><span> </span></a></li>
 -->
