--- a/apps/mac/iplocation/index.html
+++ b/apps/mac/iplocation/index.html
@@ -159,6 +159,7 @@
                             <li><a href="#screenshots">screenshots</a></li>
                             <li><a href="#packages">versions</a></li>
                             <li><a href="#packages">buy</a></li>
+                            <li><a href="https://iplocation.nolt.io/" rel='nofollow'>roadmap</a></li>
                             <li><a href="/support/">support</a></li>
                         </ul>
                     </div>
