--- a/apps/mac/writerise/index.html
+++ b/apps/mac/writerise/index.html
@@ -73,8 +73,9 @@
 
                 <div class="collapse navbar-collapse" id="navbar-collapse">
                     <ul class="nav navbar-nav navbar-right">
-                        <!-- <li><a href="./index.html" title="">Home</a></li> -->
-                        <!-- <li><a href="./project.html" title="">Project</a></li> -->
+                        <li><a href="./index.html" title="">Home</a></li>
+                        <li><a href="./project.html" title="">Project</a></li>
+                        <li><a href="https://writerise.nolt.io/" rel='nofollow'>Roadmap</a></li>
                         <li>
                             <p>
                                 <a href="#BUY" class="btn btn-default navbar-btn" title="">Buy</a>
